# Proyecto_proga2

./: .gitignore.swp  CMakeLists.txt  main.cpp
headers/: CAlumno.h  CEvaluacion.h  CMenu.h  CSeccion.h
source/: CAlumno.cpp  CEvaluacion.cpp  CMenu.cpp  CSeccion.cpp
